Fix footer overflowing to the right on wide screens

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -107,8 +107,13 @@ object.email {
 
 /* Footer toujours en pied de page */
 footer {
+    position: relative !important;
+    left: auto !important;
+    margin-left: auto !important;
+    bottom: auto !important;
+    width: auto !important;
     clear: both;
-    width: 100%;
+    text-align: center;
 }
 
 .submenu a:hover {
